[gd_scene load_steps=14 format=3 uid="uid://m6lm6v6t2i0v"]

[ext_resource type="Script" path="res://UI/dialogue.gd" id="1_wnxmf"]
[ext_resource type="Texture2D" uid="uid://pr3rwumwg1u" path="res://Characters/Portraits/captain_avery.png" id="2_7s0ty"]
[ext_resource type="Texture2D" uid="uid://dbl5poln2tn1r" path="res://UI/left_click.png" id="3_fbyst"]
[ext_resource type="Script" path="res://random_audio.gd" id="4_juhdn"]
[ext_resource type="AudioStream" uid="uid://bdqwp17wwifoy" path="res://Sounds/talk_parrot.wav" id="5_lsy7r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uocew"]
bg_color = Color(0.172549, 0.27451, 0.360784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.266667, 0.4, 0.431373, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.0823529)
shadow_size = 4
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hj16s"]
bg_color = Color(0.270588, 0.427451, 0.458824, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.372549, 0.560784, 0.603922, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.0823529)
shadow_size = 4
shadow_offset = Vector2(4, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkde4"]
atlas = ExtResource("2_7s0ty")
region = Rect2(0, 0, 512, 512)

[sub_resource type="Animation" id="Animation_cpvem"]
resource_name = "flash"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.282353), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7efpe"]
_data = {
"flash": SubResource("Animation_cpvem")
}

[sub_resource type="Animation" id="Animation_1x46k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/MarginContainer/Character/Portrait:texture:margin")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dxpsg"]
resource_name = "talk"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/MarginContainer/Character/Portrait:texture:margin")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 0, 0), Rect2(0, -20, 0, 0), Rect2(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7utu7"]
_data = {
"RESET": SubResource("Animation_1x46k"),
"talk": SubResource("Animation_dxpsg")
}

[node name="dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnxmf")

[node name="Namebox" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.632
anchor_right = 0.312
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uocew")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Namebox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Nameplate" type="Label" parent="Namebox/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Captain Avery"
horizontal_alignment = 1

[node name="NinePatchRect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.683
anchor_right = 0.94
anchor_bottom = 0.94
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj16s")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Character" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="NinePatchRect/MarginContainer/Character"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_pkde4")
expand_mode = 3
flip_h = true

[node name="DialogueLabel" type="RichTextLabel" parent="NinePatchRect/MarginContainer/Character"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "awefawefawefawef hehe"

[node name="Player" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmIcon" type="TextureRect" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.944
anchor_top = 0.621
anchor_right = 0.989
anchor_bottom = 0.92
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_fbyst")
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/ConfirmIcon"]
libraries = {
"": SubResource("AnimationLibrary_7efpe")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7utu7")
}

[node name="SpeechSound" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
bus = &"sfx"
script = ExtResource("4_juhdn")
samples = Array[AudioStream]([ExtResource("5_lsy7r")])
random_volume_range = 1.1
random_pitch_range = 0.2
